# trello2md

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .pydocstyle  LICENSE.txt  README.md  mypy.ini  sample-card.json  setup.cfg  setup.py  tox.ini  trello2md.py
.github/workflows/: tox.yml
scripts/: sync_pre_commit.py
src/: Makefile  trello2md.py
src/trello2md/: __main__.py  api.py  cli.py
tests/: copied-card.json  copied-card.md  sample-board.json  sample-card.md  test_api.py  test_cli.py  test_trello2md.py
tests/cassettes/test_cli/: test_write_board.yaml  test_write_card[copied].yaml  test_write_card[sample].yaml  test_write_credentials.yaml
tests/cassettes/test_trello2md/: test_write_board.yaml  test_write_card[copied].yaml  test_write_card[sample].yaml
tests/sample-board/: another-card-1.md  copied-card.md  index.md  sample-card.md
