[metadata]
name = trello2md
description = Export Trello boards and cards to Markdown
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bhrutledge/trello2md
author = Brian Rutledge
author_email = brian@bhrutledge.com
license = MIT
license_file = LICENSE.txt
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Utilities

[options]
packages =
    find:
py_modules = trello2md
install_requires =
    python-dateutil
    pytz
    requests
    requests-oauthlib>=0.4.1
python_requires = >=3.7
package_dir =
    =src
setup_requires =
    setuptools_scm

[options.entry_points]
console_scripts =
    trello2md=trello2md:main

[options.extras_require]
dev =
    black
    flake8
    mypy
    pydocstyle
    pytest

[options.packages.find]
where = src
