[metadata]
name = trello2md
description = Export Trello boards and cards to Markdown
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bhrutledge/trello2md
author = Brian Rutledge
author_email = brian@bhrutledge.com
license = MIT
license_file = LICENSE.txt
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Topic :: Utilities

[options]
packages =
    find:
install_requires =
    py-trello@https://github.com/bhrutledge/py-trello/archive/develop.zip
python_requires = >=3.8
package_dir =
    =src
setup_requires =
    setuptools_scm

[options.entry_points]
console_scripts =
    trello2md=trello2md.cli:main

[options.extras_require]
test =
    coverage
    pytest
    pytest-recording

[options.packages.find]
where = src
